Написаны: Геймплей, Проработка и Архитектура в своем начальном состоянии

--- a/doc/02-Проработка.mkd
+++ b/doc/02-Проработка.mkd
@@ -7,6 +7,8 @@
 
 В частности, в первоначальном описании геймплея предлагалось использовать изометрическую проекцию, вид сверху на уровень, практически 2D. С учетом специфики движка (он 3D), а также оглядываясь на следующий основной проект, выбираем полное 3D с видом от третьего лица.
 
+Также в процессе работой над этой игрой будут освоены и опробованы принципы, а, возможно, и написаны общие классы для реализации динамического создания игровой обстановки на основе описания уровня.
+
 -------------------------------
 
 Организация уровней
@@ -27,7 +29,11 @@
 
 Также из описания файла видно, что картинка имеет разрешение 16x16 пикселов, использует палитру из 10 цветов, и каждый цвет обозначен одним символом (так расшифровывается строка **"16 16 10 1"**.
 
-Этот формат для описания уровня можно использовать без изменений (для упрощения процесса создания уровней), заменив лишь идентификаторы цветов (вроде #FFFFFF) на какие-то другие идентификаторы, понятные игре. Например, на такие: #space, #wall, #cat, #dog, #start, #WC, и т.п., а также заменив **/\* XPM \*/** на **/\* GAMELEVEL \*/**. Кроме того, в дальнейшем развитии, можно ввести суффиксы у идентификаторов: **$N**, **$W**, **$E**, **$S**, обозначающие ориентацию объекта по сторонам света (имеется ввиду, что север всегда сверху уровня). Тогда полный идентификатор будет выглядеть как, например, **#start$S**, что будет означать начальную позицию игрока, развернутую лицом на юг.
+Этот формат для описания уровня можно использовать без изменений (для упрощения процесса создания уровней), заменив лишь идентификаторы цветов (вроде #FFFFFF) на какие-то другие идентификаторы, понятные игре. Например, на такие: #space, #wall, #cat, #dog, #start, #WC, и т.п., а также заменив **/\* XPM \*/** на **/\* GAMELEVEL \*/**. Кроме того, в дальнейшем развитии, можно ввести суффиксы у идентификаторов: **$N**, **$W**, **$E**, **$S**, обозначающие ориентацию объекта по сторонам света (имеется ввиду, что север всегда сверху уровня). Тогда полный идентификатор будет выглядеть как, например, **#start$S**, что будет означать начальную позицию игрока, развернутую лицом на юг. Либо, при дальнейшем развитии движка буквы N, W, E и S вообще можно заменять на цифры, означающие градус поворота.
+
+Как будет показано дальше, при разработке Архитектуры, возникает необходимость введения необязательных индексов, показывающих принадлежность нескольких рядом стоящих ячеек к одному единому объекту. Индексы будем отделять символом косой черты "**\\**".
+
+И вот теперь полный идентификатор объекта будет уже выглядеть так: **#cabinet1$W\3**. Наряду со шкафом №3 модели "1", расположенного лицевой стороной на запад, может существовать еще и шкаф №2 такой же модели "1" и тоже обращенный на запад: **#cabinet1$W\2**, но занимающий другие ячейки на игровом уровне.
 
 Необходимо будет в коде игры создать класс для парсинга таких файлов, и чтобы этот класс умел динамически создавать игровое окружение.
 
